Add user configuration parameters management
Implements user-specific system configuration parameters, including DTO, service, and REST controller for CRUD operations. Integrates parameter loading and saving in Login and Settings controllers, supports language, currency, taxes, and contact info. Updates UI to reflect user preferences and adds i18n keys for new settings. Database schema and utility classes updated to support new parameter entity.